data/Java/02-missing-void/4/[M]Error.txt
https://stackoverflow.com/questions/44502917/invalid-method-declaration-return-type-required-diffrent-class-name-to-filena
Program.java:12: error: invalid method declaration; return type required
    public Q1LanguageExplorerJava()
           ^